@startuml ClassDiagram
title Class Diagram

skinparam TitleFontStyle bold
skinparam TitleFontSize 20
skinparam TitleBackgroundColor #LightCyan

skinparam lineType ortho
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam packageStyle rectangle


package "Main Application" {
    class MainApp <<Orchestrator>> #87CEEB {
    }
    
    class StereoCamera #FEFECE {
    }
    
    class AIModel #FEFECE {
    }
}


package "GUI Elements" {
    class CameraView <<GUI>> #FFC69D {
    }
    
    class MapView <<GUI>> #FFC69D {
    }
    
    class RightOffCanvas <<GUI>> #FFC69D {
    }
    
    class ChevronHandle <<GUI>> #FFC69D {
    }
    
    class TearOffTab <<GUI>> #FFC69D {
    }
    
    class TearOffTabBar <<GUI>> #FFC69D {
    }
    
    class TearOffTabManager <<GUI>> #FFC69D {
    }
    
    class FloatingPane <<GUI>> #FFC69D {
    }
}


MainApp *-- "1" RightOffCanvas
MainApp *-- "1" TearOffTabManager
MainApp *-- "1" CameraView
MainApp *-- "1" MapView
MainApp *-- "1" AIModel
MainApp *-- "2" StereoCamera

RightOffCanvas *-- "1" ChevronHandle

TearOffTabManager *-- "1" TearOffTabBar
TearOffTabManager *-- "0..1" FloatingPane

TearOffTabBar *-- "*" TearOffTab


legend top right
  | Color | Meaning |
  | <#87CEEB> | Orchestrator |
  | <#FFC69D> | GUI classes |
  | <#FEFECE> | Business Logic|
end legend


@enduml